<resources>
    <string name="cropurl">13.48.31.210:8080</string>
    <string name="fertilizerurl">13.48.31.210:8080/fertilizer</string>
    <string name="yieldurl">13.48.31.210:8080/yield</string>
    <string name="locate">"file:///android_asset/location.html"</string>
    <string name="demand">"file:///android_asset/demand.html"</string>





    <string name="app_name">Growz</string>

    <string name="home">Home</string>
    <string name="Crop">Crop Prediction</string>
    <string name="Plant">Plant Disease</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="market">Market Demand</string>
    <string name="yield">Crop Yield</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>


    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="feedbackc">Feedback</string>

    <string name="submit">submit</string>

    <string name="growz">GROWZ</string>
    <string name="selectimage">Select Image</string>
    <string name="state_label">State</string>
    <string name="district_label">District</string>
    <string name="crop_label">Crop</string>
    <string name="Name">Name</string>
    <string name="Aadhar_number">Aadhar_number</string>
    <string name="Feedback">Feedback</string>
    <string name="Submit">Submit</string>
    <string name="AboutUs">About Us</string>
    <string name="ContactUs">Contact Us</string>






</resources>